--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P6-120822-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P6-120822-JS.md
@@ -1,13 +1,23 @@
-# Participant Number [x]
+# Participant Number [6]
 
-**Date:**
+**Date:** Thursday, December 8, 2022
 
-**Time:**
+**Time:** 3:30 ET
 
 **Notetaker Name & Email:** 
+Jessica Stump (jessica.stump@adhocteam.us)
+
 
 ---
- 
+ ## Task - Warm-up Questions
+- I have used it before
+- Um, I prefer to use myhealtevet. All the other options are extra securituy and I can't figure it out.
+- I type my username and password and I'm done
+
+- Yes (looking at forms with household info)
+
+
+
 ## Task - Start Application
 > Things to watch for:
 > - [Quotes from participant about any content on the intro page that makes them feel uneasy, confused or not prepared to complete application.]
@@ -15,18 +25,23 @@
 
 
 **Quotes/Notes**
-- type here
-- For stand-out verbatim quotes put in " "  
-- 
+- I guess this part is just to check the status if I have applied before
+- the other steps are just information I might look at or i might not
+- Probably just skip and just go to the application
+- (why might you skip)
+- Just - I don't feel, I guess I;m lazy I just want to get at the main thing and not look at extra informaiton
+- I would look at the time - make sure I have that much time free, before I do the application
+- I wouldn't look at Privacy Act becuase I don't care
 
 > Participant questions:
 > On a scale of 1-5 (1 being non very poorly and 5 being very well) - how prepared does this page make you feel about the application you are about to begin? Why?
 **Answers**
-- Type here
+- I guess if I was to look at it it would let me know everythnign I need to knonw. In my case, I typically know what I need before. If I didn't it seems to tell you what and why
+- For an older person, they might not know what they need. I have done a lot so I am familiar with the processes. 
 
 > Can you tell us more about what you would have to do in preparation for filling out this application?
 **Answer**
-- Type here
+- I have all of this saved on my PC in PDF forms,  I have all that ready to go and would just go to the application.
 
 
 ## Task - Veteran information
@@ -36,7 +51,16 @@
 
 
 **Quotes/Notes**
-- "type here"
+- For me, the steps and continue, it's annoying. 
+- I would prefer to have it 2 or 3. You could fit more boxes on this page, a lot more boxes.
+- It is extra work clicking continue
+- More fields at once on page.
+- Or an option to show all fields
+- People like me, who want everything on the page could see all fields. 
+- This is even worse, a single box on the entire page (SSN)
+- Yeah this is getting really annoying, a single thing per page. i'm not a fan 
+- (Worked with American Indian page without much pause or comments)
+- (preferrered contact question) For me, email. I can respond when I want to, instead of with phone and play phone tag.
 
 > Participant questions:
 > - What worked well for you?
@@ -44,7 +68,7 @@
 > - What would you like to change or add?
 
 **Answers**
-- Type here
+- No, simple enough
 
 
 **Observer rating of task completion (select below)**
@@ -52,7 +76,7 @@
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
-- [ ] 4 = All parts of the task were completed with no difficulty
+- [x] 4 = All parts of the task were completed with no difficulty
 
 
 ## Task - VA benefits & military service 
@@ -62,8 +86,16 @@
 
 
 **Quotes/Notes**
-- "type here"
-
+- (Answers )
+- (Tries to click on drop-down with Current Compensation page, Pension)
+- "Is that disability or military pension, not entirely sure
+- "It could be more specific
+- Works through Military service page with no comments
+(upload page)
+- Simple enough. I know what the discharge papers are for me. I already have it in PDF form. I guess that would be simple for me.
+- This tells you what to do, for a person who didn't have it they could do that
+- I guess if a person was completing their form on their PC and then they took a scan with their phone, might be difficult to transfer. 
+- I don't know a way around that though
 
 ---
 
@@ -74,15 +106,23 @@
 > - [Does the participant click yes or no on the financial disclosure page and express why?]
 
 **Quotes/Notes**
-- "type here"
+- (quietly looks over page)
+- Seems simple enough
+- Telling me what information you are going to need
 
+- (Interacts with qualifying eligibility factors drop down on page first)
+- For me, I don't have an issue providing finanical information, I would just click yes. I wouldn't need to look at this part (points to alert box)
+- If the VA needs my informaiton I would just give it to them
+- (clicks no)
 
 > Participant questions:
 > - What worked well for you?
 > - What was unclear or didn’t work well for you?
 > - What would you like to change or add?
 **Answers**
-- Type here
+- I guess maybe, (travel pay, copay) put links to what they are. 
+- I might not now what travel pay or what a copay i would need
+- The rest seems fine
 
 
 **Observer rating of task completion (select below)**
@@ -90,7 +130,7 @@
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
-- [ ] 4 = All parts of the task were completed with no difficulty
+- [x] 4 = All parts of the task were completed with no difficulty
 
 
 
@@ -102,8 +142,11 @@
 > - [Does the participant comment the question is intrusive or that they would skip and/or answer untruthfully?]
 
 **Quotes/Notes**
-- "type here"
-- 
+- (answers never married)
+- No, it's clear
+- Simple enough
+- (Goes back a page during spouse additional info)
+
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
@@ -112,6 +155,7 @@
 - [ ] 3 = Most of the task was completed with little difficulty
 - [ ] 4 = All parts of the task were completed with no difficulty
 
+NA - 
 
 ## PRIMARY Task - Adding dependents
 > Things to watch for:
@@ -121,22 +165,25 @@
 
 
 **Quotes/Notes**
-- "type here"
-- 
+- (First clicks on drop down)
+- A spouse would be a dependent I guess, or an eldery parent if I was caring for them
+- It is clear
+- (scrolls down on page)
+- Should I continue or complete the form?
+- (instructed to add a dependent)
+- (First page completes easily iwith basic info)
 
-> Participant questions:
-> - What worked well for you?
-> - What was unclear or didn’t work well for you?
-> - What would you like to change or add?
-
-**Answers**
-- Type here
+- I guess permanelt and totally disabled, that is not something I knew about 4 years ago
+- I wouldn't know what that means if I was completing that
+- I would need clarification of what they consider permanent and disabled
+- Maybe a link to a page that describes it
+- The rest is simple enough to comprehend
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
-- [ ] 3 = Most of the task was completed with little difficulty
+- [x] 3 = Most of the task was completed with little difficulty
 - [ ] 4 = All parts of the task were completed with no difficulty
 
 
@@ -146,14 +193,20 @@
 > - [Does the participant easily make their edit and continue on without getting hung up?]
 
 **Quotes/Notes**
-- "type here"
-- 
+- Click the edit button,
+- I guess, it would be better if the edit button listed the sections so I could go to that specific section instead of going through the entire thing again
+- Like if I click edit, it should show these pages separatley. Instead of me having to go through all of them again
+- (easily goes to remove button)
+
+- Just the edit suggestion I made before. 
+- Maybe make the button not clickable, until the no or yes selected
+
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
-- [ ] 3 = Most of the task was completed with little difficulty
+- [x] 3 = Most of the task was completed with little difficulty
 - [ ] 4 = All parts of the task were completed with no difficulty
 
 
@@ -163,14 +216,22 @@
 > - [Does the participant interact with any of the additional information components for more context needed?]
 
 **Quotes/Notes**
-- "type here"
+- (pauses while reading the page)
+- Seems simple enough
+- (long to gather question)
+- I guess for me, when I looked at the appliaiton and what the requirements are, I would have it ready to go.
+- I wouldn't do the application until i had the information
+- I don't know if it told me I would need my spouse's information. If I was doign it I would need them home or it would ruin it.
+- I don't recall if it told me that or now
+
 
 > Participant questions:
 > - What worked well for you?
 > - What was unclear or didn’t work well for you?
 > - What would you like to change or add?
 **Answers**
-- Type here
+- THis part might be a bit confusing- if my spouse and I had a business together. should I put the previpous number here too? I need more clarification of what I should put.
+- The rest is clear
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
@@ -186,36 +247,36 @@
 > - [Does the participant notice and call attention to the alert component?]
 
 **Quotes/Notes**
-- "type here"
+- This also, I would not know
+- If you have a spouse, this is all the information you would need
+- This mihgt take some time to find
+- 
 
 ---
 
 ## Post-Task Interview 
 
-> [NPS Repeat Question]
-> How likely are you to recommend this online application to another Veteran? [Scale of 0 - 10]
 
-**Response**
-- Type here
+
 
 > [Study Specific]
 
-> What are your thoughts on the order of the questions as they were presented in the prototype? Did anything surprise you?
+> Participant questions:
+> On a scale of 1-5 (1 being non very poorly and 5 being very well) - how prepared does this page make you feel about the application you are about to begin? Why?
+**Answers**
+I think it had most of the informaiton.
+For a person that is alone with no dependents, it had what I need
+For preparing me you mean? For a single person, 5 is fine. 
 
+> What are your thoughts on the order of the questions as they were presented in the prototype? Did anything surprise you?
 **Answer**
-- Type here
+- No, that was fine.
+- Maybe I will put a save option, just in case something happens during my application. I can resume it.
 
 
 > Did you feel there was not enough explanation given for the questions, too much or was just about right?
-
 **Answer**
-- Type here
-
-
-> Do you have multiple dependents and if so, is there an application experience, good or bad, that stands out in your mind you can tell us more about?
-
-**Answers**
-- Type here
+- Aside from previous suggestions, it was all clear
 
 
 
