--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P6-120822-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P6-120822-JS.md
@@ -29,14 +29,14 @@ Jessica Stump (jessica.stump@adhocteam.us)
 - the other steps are just information I might look at or i might not
 - Probably just skip and just go to the application
 - (why might you skip)
-- Just - I don't feel, I guess I;m lazy I just want to get at the main thing and not look at extra informaiton
-- I would look at the time - make sure I have that much time free, before I do the application
-- I wouldn't look at Privacy Act becuase I don't care
+- "Just... I don't feel, I guess I'm lazy I just want to get at the main thing and not look at extra information"
+- "I would look at the time, make sure I have that much time free, before I do the application
+- "I wouldn't look at Privacy Act becuase I don't care
 
 > Participant questions:
 > On a scale of 1-5 (1 being non very poorly and 5 being very well) - how prepared does this page make you feel about the application you are about to begin? Why?
 **Answers**
-- I guess if I was to look at it it would let me know everythnign I need to knonw. In my case, I typically know what I need before. If I didn't it seems to tell you what and why
+- I guess if I was to look at it it would let me know everything I need to knonw. In my case, I typically know what I need before. If I didn't it seems to tell you what and why
 - For an older person, they might not know what they need. I have done a lot so I am familiar with the processes. 
 
 > Can you tell us more about what you would have to do in preparation for filling out this application?
@@ -86,13 +86,13 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 
 **Quotes/Notes**
-- (Answers )
+- (Answers)
 - (Tries to click on drop-down with Current Compensation page, Pension)
 - "Is that disability or military pension, not entirely sure
 - "It could be more specific
 - Works through Military service page with no comments
 (upload page)
-- Simple enough. I know what the discharge papers are for me. I already have it in PDF form. I guess that would be simple for me.
+- "Simple enough. I know what the discharge papers are for me. I already have it in PDF form. I guess that would be simple for me.
 - This tells you what to do, for a person who didn't have it they could do that
 - I guess if a person was completing their form on their PC and then they took a scan with their phone, might be difficult to transfer. 
 - I don't know a way around that though
@@ -151,7 +151,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
-- [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- [x] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
 - [ ] 4 = All parts of the task were completed with no difficulty
 
@@ -175,7 +175,7 @@ NA -
 
 - I guess permanelt and totally disabled, that is not something I knew about 4 years ago
 - I wouldn't know what that means if I was completing that
-- I would need clarification of what they consider permanent and disabled
+- I would need clarification of what they consider permanently and disabled
 - Maybe a link to a page that describes it
 - The rest is simple enough to comprehend
 
@@ -221,7 +221,7 @@ NA -
 - (long to gather question)
 - I guess for me, when I looked at the appliaiton and what the requirements are, I would have it ready to go.
 - I wouldn't do the application until i had the information
-- I don't know if it told me I would need my spouse's information. If I was doign it I would need them home or it would ruin it.
+- "I don't know if it told me I would need my spouse's information. If I was doing it I would need them home or it would ruin it.
 - I don't recall if it told me that or now
 
 
@@ -230,13 +230,13 @@ NA -
 > - What was unclear or didn’t work well for you?
 > - What would you like to change or add?
 **Answers**
-- THis part might be a bit confusing- if my spouse and I had a business together. should I put the previpous number here too? I need more clarification of what I should put.
+- "THis part might be a bit confusing- if my spouse and I had a business together. should I put the previpous number here too? I need more clarification of what I should put.
 - The rest is clear
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
-- [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- [x] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
 - [ ] 4 = All parts of the task were completed with no difficulty
 
@@ -255,9 +255,6 @@ NA -
 ---
 
 ## Post-Task Interview 
-
-
-
 
 > [Study Specific]
 
