--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P7-120922-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P7-120922-JS.md
@@ -9,7 +9,14 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 
 ---
- 
+ ## Warm-up questions
+ - Yes (use va to sign into account
+ - Last year more frequently, working on my disability. Currently not that often, once per month for appointments. 
+
+- Yes (forms asking income and family questions)
+
+
+
 ## Task - Start Application
 > Things to watch for:
 > - [Quotes from participant about any content on the intro page that makes them feel uneasy, confused or not prepared to complete application.]
@@ -17,18 +24,23 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 
 **Quotes/Notes**
-- type here
-- For stand-out verbatim quotes put in " "  
+- Initially I would probably sign in, I like the screen shot stuff because I would follow the steps
+- (reading headlines, bold)
+- First thing I noticed, it says check your eligibility, a hypeerlink there. 
+- (reading bullets, starting trailing off, focus on bold section)
+- So far so, good
+- Save time, save your work in progress 
 - 
 
 > Participant questions:
 > On a scale of 1-5 (1 being non very poorly and 5 being very well) - how prepared does this page make you feel about the application you are about to begin? Why?
 **Answers**
-- Type here
+- 5
+- On this enrollmetn, that VA form, usually when I click the form, that form would go to hyperlink too. 
+- Having things super dummy proof where you can just click it is good for especially older Veterans.
 
-> Can you tell us more about what you would have to do in preparation for filling out this application?
-**Answer**
-- Type here
+- Sign in at time, I click signin at the top
+
 
 
 ## Task - Veteran information
@@ -38,7 +50,23 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 
 **Quotes/Notes**
-- "type here"
+- So far so good (typing name, then continue)
+- You want me to make this number up? (on SSN page)
+- So far so good, pretty self-explanitory
+- This question might be offensive to some people (birth sex) 
+- Thats all I have, (demographic page
+- Other and write in what they are, instead of having to leave one out
+- Doesn't offend me, but
+(Amerian indian page)
+- (reading through page, key words, scrolls back to top to re-read)
+- Well I read over it real fast then had to go back it
+- THe second decendent, I am Alaska native, I was just makin
+- I think that is an offensive word 
+- If you are requiring proof, I was thinking, what proof would I need to have for that?
+(address)
+- home same as mailing, yep that is pretty explanitory
+
+
 
 > Participant questions:
 > - What worked well for you?
@@ -46,7 +74,15 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - What would you like to change or add?
 
 **Answers**
-- Type here
+- Clear
+- No, it told you it was going to be 30 minutes.
+- I think it easier to have little questions on the page, sometimes in a long form, you have to scroll up and see what you have to fix
+- This one is short and simple
+- A lot of next's but yeah
+- I felt like a kept hitting continue and the steps are not moving 
+- 1/30 I guess, not 1/6. I'm looking at everytime I click continue.
+- I like to know how many more pages to go, me being impatient
+
 
 
 **Observer rating of task completion (select below)**
@@ -54,7 +90,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
-- [ ] 4 = All parts of the task were completed with no difficulty
+- [x] 4 = All parts of the task were completed with no difficulty
 
 
 ## Task - VA benefits & military service 
@@ -64,8 +100,25 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 
 **Quotes/Notes**
-- "type here"
+- (reading through content, )
+- (answers question with 50 or higher)
+- Nope, that was clear (prompted with question)
+- (not interacting with Why we ask additional info component)
+- Yep, that was easy
+- Oh my gosh, I might have to make some of this up (exact dates)
+- I got the years right of course
+-
+(Military service)
+-(read through page)
+- That is pretty self explanitory
+- No (would not add or change anything)
 
+(upload)
+- For me, when I got out for medical reason. Is that something you are looking for too? Is that other separation?
+- Yeah (specify on page)
+- I worked on teh admin separation - character of why you were separated
+- There are no other separation documents, but that is for the navy
+- Other than that, I think it looks good
 
 ---
 
@@ -76,15 +129,17 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - [Does the participant click yes or no on the financial disclosure page and express why?]
 
 **Quotes/Notes**
-- "type here"
+- (reads through page)
+- Yeah, that's pretty clear
+- Sometimes, make sure I look at it
+- In my opinion, there is no income guidelines. It is good to not have it on there, so people can fudge their income and cheat.
+- Other than that
+- When I worked - a lot of factors come into making the decision, not just income. The amount of kids. It is hard for a clear cut determination.
+- Next?
+- (keeps say next, continue btn) 
+- Okay, that's easy. Gives you an option
 
 
-> Participant questions:
-> - What worked well for you?
-> - What was unclear or didn’t work well for you?
-> - What would you like to change or add?
-**Answers**
-- Type here
 
 
 **Observer rating of task completion (select below)**
@@ -92,7 +147,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
-- [ ] 4 = All parts of the task were completed with no difficulty
+- [x] 4 = All parts of the task were completed with no difficulty
 
 
 
@@ -104,13 +159,30 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - [Does the participant comment the question is intrusive or that they would skip and/or answer untruthfully?]
 
 **Quotes/Notes**
-- "type here"
-- 
+- Ok, that's easy
+- Spouse's information that is you have one I guess
+- I know this is random, if my spouse was military. I am a Veteran, my husband is Active Duty? You 
+- You are just asking, not that he is applying for the VA stuff?
+- For me, as a Veteran I know my husband is not qualified. If t
+- I have no idea how that works, I assume anythign applying for the VA knows it's for them. 
+(address questions)
+- Okay, pretty self-explanitory
+(financial support)
+- oh, okay
+- Um..what if he just didn't live with you last year because you didn't move in until married. or that person was on deployment.
+- (Went back to address page) If I say no, is that negatively affecting me? 
+- That leaves it up to detemination of how people want to look at it
+- It starts from this page - Why 
+- Put no, then explain.
+- This one, the financial support, a further explanation of why they didn't . But I don't think somebody should be punished for not supporting their spouse, deployment, moving
+- People can feel as a woman I don't want to support my husband who lives over there, or has an own job. I don't know
+- (address page) Yep, self explanitory
+
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
-- [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
+- [x] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
 - [ ] 4 = All parts of the task were completed with no difficulty
 
@@ -123,8 +195,24 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 
 **Quotes/Notes**
-- "type here"
-- 
+- I would assume it is on the next page (radio selected yes)
+- (scrolls down page quietly)
+- Oh okay, I was going to laugh at birthday and when but then realized step daugheter / son, adopted. At first I was like, 
+- From here I woulnd't know where to add another one at
+- At the bottom, it will say add annother dependent
+- I clicked, then go back
+- See it is still not asking me (add info page)
+- I do like the quickness, the itty bitty questions
+- This is alot for one page
+- I know I am still asking the quesions about this child
+- When I asnwered those first questions, assumed that was the end of it
+
+- Ok, that is pretty simple
+- I know, for the dependent live with you. Does a father get 20% the same? Like 80%, or 20%
+- I know myself, my husband, my ex and his spouse can all claim my dependent on VA
+(dependent support question)
+- I mean after you click yes, there I am assuming the next continue would be the amount you provided
+ 
 
 > Participant questions:
 > - What worked well for you?
@@ -138,7 +226,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
-- [ ] 3 = Most of the task was completed with little difficulty
+- [x] 3 = Most of the task was completed with little difficulty
 - [ ] 4 = All parts of the task were completed with no difficulty
 
 
@@ -148,15 +236,30 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - [Does the participant easily make their edit and continue on without getting hung up?]
 
 **Quotes/Notes**
-- "type here"
-- 
+- Ok, there it is
+- You just keep pushing yes, until you are done
+- But it would;n' tmake sense at that point, you still had those other pages
+- Uh, edit
+- Want me to push it?
+[slight interupption)]
+- Yeah, just edit
+- Remove (take a dependent off list)
+- (reads popup)
+- Then you put yes
+
+
+[Dependent experience question]
+- Simple, same (compared to others used)
+[change or add to process question]
+- No
+
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
-- [ ] 4 = All parts of the task were completed with no difficulty
+- [x] 4 = All parts of the task were completed with no difficulty
 
 
 ## PRIMARY Task - Annual income
@@ -165,20 +268,25 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - [Does the participant interact with any of the additional information components for more context needed?]
 
 **Quotes/Notes**
-- "type here"
+- (reading through page, scrolling down and back up)
+- Okay, the only thing I see that is um.. sorrry kiddo up
+- It just says net income, I guess when I click the amount, 
+- When I am going to put my retirement and VA benefits, I should be able to identify which one their are?
+- Maybe if you put it in there, tell you want it is
+- Have another button, if that helps determine if I am over the income or whatever
+- Especially like severance pay, I am not going to get that every year. that can definitley throw off
+- This was a one -time instead of lumping it in with your gross 
 
-> Participant questions:
-> - What worked well for you?
-> - What was unclear or didn’t work well for you?
-> - What would you like to change or add?
-**Answers**
-- Type here
+(spouse's income_
+- Basic same thing for this, 
+- Same thing
+
 
 **Observer rating of task completion (select below)**
 - [ ] 0 = no part of the task completed, much difficulty
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
-- [ ] 3 = Most of the task was completed with little difficulty
+- [x] 3 = Most of the task was completed with little difficulty
 - [ ] 4 = All parts of the task were completed with no difficulty
 
 ## PRIMARY Task - Deductible information
@@ -188,8 +296,15 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > - [Does the participant notice and call attention to the alert component?]
 
 **Quotes/Notes**
-- "type here"
+- (reading page, scrolling down)
+- mm K
+- Maybe child support or spousal support, don't knnow if those are deductible or not
+- I am not sure if those are deductible expenses or not 
 
+
+
+
+- It is definetly phone friendly
 ---
 
 ## Post-Task Interview 
@@ -198,31 +313,47 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > How likely are you to recommend this online application to another Veteran? [Scale of 0 - 10]
 
 **Response**
-- Type here
+- highly likeley
+- Easier than the process I had to do
+- Paper
+- I went into the VA, and just standing there and then fill out this paper. Have to 
+- Don't know what to 
+- This is definetly faster
+- A lot of apps now when they ask to scan, can take a picture on their phone 
+
+- Definetly, 10 it is easy
 
 > [Study Specific]
+ 
+ - I remember it was pretty good, 
+ - I was thinking I was going to screen shot and make sure I have everything
+ - And then going through, you should have all of that prior to starting it so it 
+ - Definelty a lot of backs
+ - Everything was pretty simple, bullet points
+ - 5, (same rating)
+
 
 > What are your thoughts on the order of the questions as they were presented in the prototype? Did anything surprise you?
-
 **Answer**
-- Type here
+- No
+- The Veteran, spouse and dependents like normal
 
 
 > Did you feel there was not enough explanation given for the questions, too much or was just about right?
-
 **Answer**
-- Type here
+- Pretty simple
 
 
-> Do you have multiple dependents and if so, is there an application experience, good or bad, that stands out in your mind you can tell us more about?
 
 **Answers**
-- Type here
+- On my phone it was okay,
+- On my computer it would be ridiculous to have one little
+- This is app friendly for your phone
+- Why don't they put all the question on one page for a desktop
+- but on the phone, it is nice
 
 
 
 
 ---
-
- [Reference Mural for live notes/synthesis](https://app.mural.co/t/adhoccorporateworkspace2583/m/adhoccorporateworkspace2583/1666894526417/3cd5fb1ef447104ac677305a840849e322956178?sender=u9b3a9c1b688c0e4bb4994314)
 
