--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
@@ -24,7 +24,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 - People who needed serious help, if they come to that first, they will jump. Get them to give you the information before throwing the mental health thing, they will be less likey to run away from the process. 
 - The DD214 thing is something that needs to be streamlined as well. People think they have to get the DD14 before they can do this, there should be something backended where they don' have to physically get the DD214.
 - Some are in the system, if you have social, somebody should be able to back end those 214's.
-- I would do start your application as 1, gather info as 2, check eligibility. If you say you are starting application that is getting people moving in the direction. 
+- I would do start your application as 1, gather info as 2, then check eligibility. If you say you are starting application that is getting people moving in the direction. 
 
 
 > Participant questions:
