--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P7-120922-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P7-120922-JS.md
@@ -10,10 +10,10 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 ---
  ## Warm-up questions
- - Yes (use va to sign into account
- - Last year more frequently, working on my disability. Currently not that often, once per month for appointments. 
+ - Yes (use va to sign into account)
+ - Last year more frequently, because I was working on my disability. Currently not that often, once per month for appointments. 
 
-- Yes (forms asking income and family questions)
+- Yes (forms asking income and family question)
 
 
 
