--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
@@ -36,7 +36,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 > Can you tell us more about what you would have to do in preparation for filling out this application?
 
 **Answer**
-- I would put start your application first, they are there to start that applicatiton. 
+- I would put start your application first, they are there to start that application. 
 it is a rocky road to get to this spot for a lot of people, getting people to this place is fraught with a lot of problems. 
 - Congratualtions you have gotten here, let's start your application. They you can gather your informaiton to check your eligibility.
 - Based on what you are asking for, how it is positive here, I would change up that format, so when they get there they feel like they are starting their application.
