--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
@@ -53,11 +53,11 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 - Social is good, 
 - First questions move through easily, 
 - Answers that he normally fills out forms on a mobile device
-- (Comments that he uses all - iMac, iPad and iPhone, uses a spectrem of devices)
+- (Comments that he uses all - iMac, iPad and iPhone, uses a spectrum of devices)
 - Pauses on American Indian page, IHCIA, "huh"
-- (Impressions of this page) = I understand percicley what you are asking for, and I would say something about it early in the blockage. Under the header. As to what the IHCIA is
+- (Impressions of this page) = I understand precisely what you are asking for, and I would say something about it early in the blockage. Under the header. As to what the IHCIA is
 - I'm an 1/8 Cherokee, it is something that applies, but (pause). It is unwieldy. If you are first nations, if you are this click here for eligibiltiy informaiton concerning this or that. 
-- It can take you to a sidebar, instead of having everybody read this. Go back to the top and what is IHCIA. I understand res throry, first nations from Alaska. I think taking to a sidebar, instead of just out of the bag, n ot making everybody fool around with it.
+- It can take you to a sidebar, instead of having everybody read this. Go back to the top and what is IHCIA. I understand res throry, first nations from Alaska. I think taking to a sidebar, instead of just out of the bag, not making everybody fool around with it.
 - Like the previous screen - whatever we are doing these days- take you to a side bar then bring you back.
 - Asking everybody for qualifiers would determine that
 - 
@@ -70,7 +70,7 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 
 **Answers**
 - No, nothing unclear or confusing. It is perfect. 
-- (Add) a lot of stuff you are going to have to add, my perosnal needs it is all good. Some will say include this or that, I am not that complicated. 
+- (Add) a lot of stuff you are going to have to add, my personal needs it is all good. Some will say include this or that, I am not that complicated. 
 
 
 > Things to watch for:
@@ -90,8 +90,8 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 **Quotes/Notes**
 -  "Makes complete sense, real clear"
 - (rate experience) "pretty solid"
-- I know from experinece working with older Veterans not adept iwth this stuff, they don't have a clue. If you tell them they can take a picture of the documnet,
-- I know what a jpg, png - the whole concept of upload document. they will try and stick it in the CD player (laughs). You say upload to somebody who is 70 years old, they don't have a clue. Say take a picture of both sides of your DD14 and upload that. It is a simpel things, to you and I it would seem realy childish. 
+- I know from experinece working with older Veterans not adept with this stuff, they don't have a clue. If you tell them they can take a picture of the documnet,
+- I know what a jpg, png - the whole concept of upload document. they will try and stick it in the CD player (laughs). You say upload to somebody who is 70 years old, they don't have a clue. Say take a picture of both sides of your DD14 and upload that. It is a simple things, to you and I it would seem realy childish. 
 - You are dealing with a bunch of children who grew old. They are all just 4 years old and just grew old. 
 - (notices last bullet after pointed out) = Yep there it is. 
 - The old dudes will see stuff " I can't do that" - they are off to drink coffee at the VFW
@@ -109,7 +109,7 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 ## PRIMARY Task - Financial disclosure question
 **Quotes/Notes**
 - This is the first shot over the bow - here it comes you are going to have to disclose all your flea market money, garage sale money
-- This makes sense, they are asking the VA to pay for the
+- This makes sense, they are asking the VA to pay for their health care. It makes sense.
 
 - Do you want to suppply? question 
 - Laughs - "No, not really. "
