--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P3-120722-JS.md
@@ -120,7 +120,7 @@ it is a rocky road to get to this spot for a lot of people, getting people to th
 - (Why) Do you want to provide, 
 - Looking for the bubbles (radio buttons), my participation. 
 - The explanation for the question should come after the question.
-- You kind of what people to disclosure their financial info anywyas, as part of course. 
+- You kind of what people to disclosure their financial info anyways, as part of course. 
 - I disclose all of my stuff because I want to help.
 - Put you don't have to above want to.
 
