--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P11-121322-HJ.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P11-121322-HJ.md
@@ -15,24 +15,30 @@
 - Not asked about or provided income information before
 - Had issues on sharing the screen
      - Moderator shared their screen and the participant instructed the moderator on where to go
-- Intro page
+#### Intro page
      - P11 Would sign in, immediate reaction
      - Preparation rating: 5
-- Contact info page
+#### Contact info page
      - Preferred method to be contacted is Email
-- Upload page
+#### Upload page
      - Would take a picture of the DD214 to upload
-- Spouse page (Has never been married)
+#### Spouse page (Has never been married)
      - Question on “Did your spouse live with you last year” - Is it for the whole year, or just part of it?
-- Dependent page (Does not have dependents)
+#### Dependent page (Does not have dependents)
      - The question around “When did they become your dependent”, could use more context, especially in a step-child scenario
      - Question on “Did your dependent live with you last year” - Is it for the whole year, or just part of it?
-- Income Page
+#### Income Page
      - Would take about 30 minutes to get Income details
-Deductible Page
+#### Deductible Page
      - Would take about 30 minutes to get deductible details
 
+#### Anything else?
 - Would recommend the application to another Veteran: 9
 - Preparation page rating:  5 (same rating)
 
 - “I thought it flowed pretty good”
+
+---
+
+#### Summary
+Participant seemed to go through the form with a couple of hesitations, mostly around the questions that refer to "Last Year", and whether they mean the whole year. Most everything seemed clear for them, and they did not change their preparation rating from start to end.
