--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P4-120722-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P4-120722-JS.md
@@ -298,7 +298,7 @@ Remove from list
 ## PRIMARY Task - Deductible information
 
 **Quotes & Observations**
-- That is interseting
+- That is interesting
 - Expenses might be higher than your income, we would adjust... I would love to see how you do that
 - They way the economy is going and everything else is going,
 - (Anything unclear question) No
