--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P5-120822-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P5-120822-JS.md
@@ -147,7 +147,7 @@ Jessica Stump (jessica.stump@adhocteam.us)
 - [ ] 1 = Partial completion, much overlooked or task was difficult
 - [ ] 2 = Partial completion, some areas were overlooked or task was slightly difficult
 - [ ] 3 = Most of the task was completed with little difficulty
-- [ ] 4 = All parts of the task were completed with no difficulty
+- [x] 4 = All parts of the task were completed with no difficulty
 
 
 ## PRIMARY Task - Adding dependents
