--- a/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P5-120822-JS.md
+++ b/products/health-care/application/va-application/research/2022-10-Household Information Section/research-notes/P5-120822-JS.md
@@ -268,8 +268,8 @@ Jessica Stump (jessica.stump@adhocteam.us)
 
 > Change or update question
 **Answer**
-- If they can give an estimate, that is fine that is easier on people. Instead of having to go thorugh all the insuran
-- Too much financial questions for applying to healthcare, one has nothing to do wiwth the other
+- If they can give an estimate, that is fine that is easier on people. Instead of having to go thorugh all the insurance
+- Too much financial questions for applying to healthcare, one has nothing to do with the other
 - I don't know why this all applies to healthcare
 - What you spend, vs me trying to get a doctor or get medicine
 
@@ -287,6 +287,4 @@ Jessica Stump (jessica.stump@adhocteam.us)
 - This was pretty easy, first time doing soemthing like this. Wasn't anything difficult. 
 
 ---
-
- [Reference Mural for live notes/synthesis](https://app.mural.co/t/adhoccorporateworkspace2583/m/adhoccorporateworkspace2583/1666894526417/3cd5fb1ef447104ac677305a840849e322956178?sender=u9b3a9c1b688c0e4bb4994314)
 
