--- a/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22.md
+++ b/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22.md
@@ -1,6 +1,14 @@
 # VAOS Retros
 
 <details>
+<summary>December 20, 2022</summary>
+  
+<img width="1424" alt="Screen Shot 2022-12-20 at 4 22 00 PM" src="https://user-images.githubusercontent.com/97117349/208769499-a3873b2d-348e-4859-b834-d68e4306c2a4.png">
+
+</details>
+
+
+<details>
 <summary>December 7, 2022</summary>
 
 <img width="1424" alt="Screen Shot 2022-12-07 at 02 18 31 PM" src="https://user-images.githubusercontent.com/97117349/206275274-82bb5e0e-a16b-4b26-9c34-0e0144d2033e.png">
