--- a/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22.md
+++ b/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22.md
@@ -1,6 +1,14 @@
 # VAOS Retros
 
 <details>
+<summary>January 10, 2023</summary>
+
+ <img width="1394" alt="Screen Shot 2023-01-10 at 4 12 42 PM" src="https://user-images.githubusercontent.com/90797205/211663911-d0678173-8258-4613-bbdd-3c6473def168.png">
+
+  
+</details>
+
+<details>
 <summary>December 20, 2022</summary>
   
 <img width="1424" alt="Screen Shot 2022-12-20 at 4 22 00 PM" src="https://user-images.githubusercontent.com/97117349/208769499-a3873b2d-348e-4859-b834-d68e4306c2a4.png">
