--- a/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22-23.md
+++ b/products/health-care/appointments/va-online-scheduling/team/retro/retros-2021-22-23.md
@@ -1,6 +1,14 @@
 # VAOS Retros
 
 <details>
+<summary>January 24, 2023</summary>
+
+ <img width="1392" alt="Screen Shot 2023-01-24 at 4 25 22 PM" src="https://user-images.githubusercontent.com/90797205/214420945-fdce7fa8-19fb-4bbc-bc6b-7adf6b74ca55.png">
+
+ 
+</details>
+
+<details>
 <summary>January 10, 2023</summary>
 
  <img width="1394" alt="Screen Shot 2023-01-10 at 4 12 42 PM" src="https://user-images.githubusercontent.com/90797205/211663911-d0678173-8258-4613-bbdd-3c6473def168.png">
